--- a/src/index.scss
+++ b/src/index.scss
@@ -37,10 +37,7 @@ a {
 body {
   background-color: $background-base;
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
   color: $text-primary;
   width: 100%;
   overflow-x: hidden;
